--- a/tex/sphinx.sty
+++ b/tex/sphinx.sty
@@ -4,7 +4,6 @@
 % Adapted from the old python.sty, mostly written by Fred Drake,
 % by Georg Brandl.
 %
-
 %
 % Modified by Jeff Terrace to work with puthesis
 %
@@ -43,8 +42,8 @@
 % \definecolor{OuterLinkColor}{rgb}{0.216,0.439,0.388}
 % % Redefine these colors to something not white if you want to have colored
 % % background and border for code examples.
-\definecolor{VerbatimColor}{rgb}{1,1,1}
-\definecolor{VerbatimBorderColor}{rgb}{1,1,1}
+\definecolor{VerbatimColor}{rgb}{0.9,0.9,0.9}
+\definecolor{VerbatimBorderColor}{rgb}{0.5,0.5,0.5}
 
 % for PDF output, use colors and maximal compression
 %\newif\ifsphinxpdfoutput\sphinxpdfoutputfalse
@@ -84,38 +83,38 @@
 
 
 % Style parameters and macros used by most documents here
-% \raggedbottom
-% \sloppy
-% \hbadness = 5000                % don't print trivial gripes
-% 
-% \pagestyle{empty}               % start this way; change for
-% \pagenumbering{roman}           % ToC & chapters
+\raggedbottom
+\sloppy
+\hbadness = 5000                % don't print trivial gripes
+
+\pagestyle{empty}               % start this way; change for
+\pagenumbering{roman}           % ToC & chapters
 
 % Use this to set the font family for headers and other decor:
 % \newcommand{\py@HeaderFamily}{\sffamily\bfseries}
 % 
 % % Redefine the 'normal' header/footer style when using "fancyhdr" package:
-% \@ifundefined{fancyhf}{}{
-%   % Use \pagestyle{normal} as the primary pagestyle for text.
-%   \fancypagestyle{normal}{
-%     \fancyhf{}
-%     \fancyfoot[LE,RO]{{\py@HeaderFamily\thepage}}
-%     \fancyfoot[LO]{{\py@HeaderFamily\nouppercase{\rightmark}}}
-%     \fancyfoot[RE]{{\py@HeaderFamily\nouppercase{\leftmark}}}
-%     \fancyhead[LE,RO]{{\py@HeaderFamily \@title, \py@release}}
-%     \renewcommand{\headrulewidth}{0.4pt}
-%     \renewcommand{\footrulewidth}{0.4pt}
-%   }
-%   % Update the plain style so we get the page number & footer line,
-%   % but not a chapter or section title.  This is to keep the first
-%   % page of a chapter and the blank page between chapters `clean.'
-%   \fancypagestyle{plain}{
-%     \fancyhf{}
-%     \fancyfoot[LE,RO]{{\py@HeaderFamily\thepage}}
-%     \renewcommand{\headrulewidth}{0pt}
-%     \renewcommand{\footrulewidth}{0.4pt}
-%   }
-% }
+\@ifundefined{fancyhf}{}{
+  % Use \pagestyle{normal} as the primary pagestyle for text.
+  \fancypagestyle{normal}{
+    \fancyhf{}
+    \fancyfoot[LE,RO]{{\py@HeaderFamily\thepage}}
+    \fancyfoot[LO]{{\py@HeaderFamily\nouppercase{\rightmark}}}
+    \fancyfoot[RE]{{\py@HeaderFamily\nouppercase{\leftmark}}}
+    \fancyhead[LE,RO]{{\py@HeaderFamily \@title, \py@release}}
+    \renewcommand{\headrulewidth}{0.4pt}
+    \renewcommand{\footrulewidth}{0.4pt}
+  }
+  % Update the plain style so we get the page number & footer line,
+  % but not a chapter or section title.  This is to keep the first
+  % page of a chapter and the blank page between chapters `clean.'
+  \fancypagestyle{plain}{
+    \fancyhf{}
+    \fancyfoot[LE,RO]{{\py@HeaderFamily\thepage}}
+    \renewcommand{\headrulewidth}{0pt}
+    \renewcommand{\footrulewidth}{0.4pt}
+  }
+}
 
 % Some custom font markup commands.
 %
@@ -166,7 +165,6 @@
   % close group to restore \parskip
   \egroup%
 }
-
 
 % \moduleauthor{name}{email}
 \newcommand{\moduleauthor}[2]{}
@@ -312,21 +310,21 @@
 % This sets up the fancy chapter headings that make the documents look
 % at least a little better than the usual LaTeX output.
 %
-% \@ifundefined{ChTitleVar}{}{
-%   \ChNameVar{\raggedleft\normalsize\py@HeaderFamily}
-%   \ChNumVar{\raggedleft \bfseries\Large\py@HeaderFamily}
-%   \ChTitleVar{\raggedleft \rm\Huge\py@HeaderFamily}
-%   % This creates chapter heads without the leading \vspace*{}:
-%   \def\@makechapterhead#1{%
-%     {\parindent \z@ \raggedright \normalfont
-%       \ifnum \c@secnumdepth >\m@ne
-%         \DOCH
-%       \fi
-%       \interlinepenalty\@M
-%       \DOTI{#1}
-%     }
-%   }
-% }
+\@ifundefined{ChTitleVar}{}{
+  \ChNameVar{\raggedleft\normalsize\py@HeaderFamily}
+  \ChNumVar{\raggedleft \bfseries\Large\py@HeaderFamily}
+  \ChTitleVar{\raggedleft \rm\Huge\py@HeaderFamily}
+  % This creates chapter heads without the leading \vspace*{}:
+  \def\@makechapterhead#1{%
+    {\parindent \z@ \raggedright \normalfont
+      \ifnum \c@secnumdepth >\m@ne
+        \DOCH
+      \fi
+      \interlinepenalty\@M
+      \DOTI{#1}
+    }
+  }
+}
 
 % Redefine description environment so that it is usable inside fulllineitems.
 %
