--- a/tex/sphinx.sty
+++ b/tex/sphinx.sty
@@ -8,6 +8,7 @@
 
 %%%% Other Preamble like stuff %%%%%%%%%%%%%%%%
 
+
 % Configure the Title Page:
 \input{meta._tex}
 
@@ -29,6 +30,10 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%\
 %%%% Use packages
 
+% \RequirePackage[draft]{graphicx}
+
+\RequirePackage{esvect}
+
 %%% for comments
 \RequirePackage{verbatim}
 
@@ -37,6 +42,9 @@
 
 % Fix the bold sans-serif font in description items:
 \renewcommand{\descriptionlabel}[1]{\hspace{\labelsep}{\rmfamily\bfseries{#1:}}}
+
+% For \includepdf
+\RequirePackage{pdfpages}
 
 % nice description style
 \RequirePackage{enumitem}
@@ -84,6 +92,7 @@
 \RequirePackage{amsmath} % for \text
 \RequirePackage{amssymb}
 \RequirePackage{upgreek}
+\RequirePackage{ziffer}
 
 \RequirePackage{framed}
 \RequirePackage{environ}
@@ -102,9 +111,6 @@
 
 % For floating figures in the text.
 \RequirePackage{wrapfig}
-
-% Separate paragraphs by space by default.
-\RequirePackage{parskip}
 
 
 %%%%%%%%%% Extra Packages %%%%%%%%%%%%%%
@@ -180,13 +186,12 @@
     }%
 }%
 
-
-\newcommand{\prettypage}{
+\newcommand{\prettypage}{%
     % Ugly, but it works.
     % For koehler's sake
     % \scshape{\dottedunderline{~\thepage~~~}}
     \scshape{~\thepage~~~}
-}
+}%
 
 % Configure footer and header
 \fancyfoot[C]{%
@@ -259,12 +264,12 @@
 
 \renewcommand{\Verbatim}[1][1]{%
   % list starts new par, but we don't want it to be set apart vertically
-  \bgroup\parskip=0pt%
+  \bgroup\KOMAoptions{parskip=no}
   \smallskip%
   % The list environement is needed to control perfectly the vertical
   % space.
   \list{}{%
-  \setlength\parskip{0pt}%
+  %\setlength\parskip{0pt}%
   \setlength\itemsep{0ex}%
   \setlength\topsep{0ex}%
   \setlength\partopsep{0pt}%
@@ -328,7 +333,7 @@
 % This sets up the fancy chapter headings that make the documents look
 % at least a little better than the usual LaTeX output.
 %
-\@ifundefined{ChTitleVar}{}{
+\@ifundefined{ChTitleVar}{}{%
   \ChNameVar{\raggedleft\normalsize\pyHeaderFamily}
   \ChNumVar{\raggedleft \bfseries\Large\pyHeaderFamily}
   \ChTitleVar{\raggedleft \rm\Huge\pyHeaderFamily}
@@ -340,9 +345,9 @@
       \fi
       \interlinepenalty\@M
       \DOTI{#1}
-    }
-  }
-}
+    }%
+  }%
+}%
 
 % % Include hyperref last.
 % \PassOptionsToPackage{hyphens}{url}
@@ -350,10 +355,8 @@
     final,
     pdftex,
     pdfauthor={\theauthor},
-    pdftitle={Design und Implemtierung eines Musikempfehlungssystems
-    basierend auf Datamining-Algorithmen},
-    pdfsubject={Design und Implemtierung eines Musikempfehlungssystems
-    basierend auf Datamining-Algorithmen},
+    pdftitle={\@worktitle \@worksubtitle},
+    pdfsubject={\@worktitle \@worksubtitle},
     pdfkeywords={Music Recommendation, Music Information Retrieval, MIR, Data Mining, Graph Theory},
     pdfproducer={LaTeX with hyperref},
     pdfcreator={pdflatex},
@@ -413,10 +416,10 @@
 \renewcommand{\hyperref}[2][\newdef]{%
     % Oh, god. I fucking hate that.
     \ifthenelse{\pageref{#1}>\pageref{rst/appendix:end-of-doc}}{%
-        \SavedHyperref[{#1}]{#2}\!\!
+        \SavedHyperref[{#1}]{#2\!\!}
     }{%
         \ifthenelse{\pageref{#1}=\pageref{rst/appendix:end-of-doc}}{%
-            \SavedHyperref[{#1}]{#2}\!\!
+            \SavedHyperref[{#1}]{#2\!\!}
         }{%
             \ifthenelse{\pageref{#1}=\thepage}{%
                 \SavedHyperref[{#1}]{#2}
@@ -444,7 +447,7 @@
 
 
 \titleformat{\chapter}      % Command 2
-    [hang]                    % Shape
+    [hang]                  % Shape
     {\Huge\bfseries}        % Format
     {\textcolor{gray75}{\thechapter\hsp|\hsp}}{0pt}
     {\Huge\bfseries}
@@ -500,11 +503,11 @@
 
 % Lower the space between bibitems:
 \let\OLDthebibliography\thebibliography
-\renewcommand\thebibliography[1]{
+\renewcommand\thebibliography[1]{%
   \OLDthebibliography{#1}
-  \setlength{\parskip}{5pt}
+  \KOMAoptions{parskip=half}
+  % \setlength{\parskip}{5pt}
   \setlength{\itemsep}{0pt plus 0.5ex}
-}
-
+}%
 % Hack
-\addto\captionsngerman{\renewcommand{\bibname}{\textcolor{gray75}{D\hsp|\hsp}Literaturverzeichniss}}
+\addto\captionsngerman{\renewcommand{\bibname}{\textcolor{gray75}{D~|~}Literaturverzeichnis}}
