Added an example document

--- a/refs.bib
+++ b/refs.bib
@@ -6,3 +6,24 @@
     isbn = {978-0-12-381479-1},
     numpages = {703}
 }
+
+@misc{collada,
+  author = {{Khronos Group Inc., The}},
+  title = {{COLLADA} - {D}igital Asset Schema Release 1.4.1 Specification (2nd Edition)},
+  howpublished = {\url{http://www.khronos.org/files/collada_spec_1_4.pdf}},
+  year = {2008}
+}
+
+@inproceedings{icmepaper,
+  title = {Unsupervised Conversion of 3D Models for Interactive Metaverses},
+  author = {Terrace, Jeff and Cheslack-Postava, Ewen and Levis, Philip and Freedman, Michael J.},
+  booktitle = {Proc. {ICME} '12},
+  year = {2012}
+}
+
+@misc{open3dhub,
+  author = {Not Me},
+  key = "Open3DHub",
+  title = "Open3DHub",
+  howpublished={\url{http://open3dhub.com/}}
+}
