--- a/tex/sphinx.sty
+++ b/tex/sphinx.sty
@@ -93,6 +93,7 @@
 \RequirePackage{amssymb}
 \RequirePackage{upgreek}
 \RequirePackage{ziffer}
+\RequirePackage{float}
 
 \RequirePackage{framed}
 \RequirePackage{environ}
