Kapitel: Grundlegendes zu Feeds

--- a/refs.bib
+++ b/refs.bib
@@ -7,6 +7,20 @@
     numpages = {703}
 }
 
+
+Heinz Wittenbrink: Newsfeeds mit RSS und Atom. Galileo Press, Bonn 2005,
+
+@inproceedings{newsfeeds,
+    author = {Heinz Wittenbrink},
+    booktitle = {Newsfeeds mit RSS und Atom},
+    title = {Galileo Press},
+    year = {2005},
+    isbn = {978-3-89842-562-9},
+    numpages = {}
+}
+
+
+
 @misc{collada,
   author = {{Khronos Group Inc., The}},
   title = {{COLLADA} - {D}igital Asset Schema Release 1.4.1 Specification (2nd Edition)},
