--- a/urls.bib
+++ b/urls.bib
@@ -20,3 +20,16 @@
 }
 
 
+@Misc{FU,
+    note = {[Stand: 30.03.2015]},
+    url = {http://www.data2type.de/xml-xslt-xslfo/newsfeeds-rss-atom/was-sind-newsfeeds/versionen-von-rss-und-atom/},
+    howpublished = "\url{http://www.data2type.de/xml-xslt-xslfo/newsfeeds-rss-atom/was-sind-newsfeeds/versionen-von-rss-und-atom/}",
+    key = {FU}
+}
+
+@Misc{HU,
+    note = {[Stand: 30.03.2015]},
+    url = {http://cyber.law.harvard.edu/rss/rssVersionHistory.html},
+    howpublished = "\url{http://cyber.law.harvard.edu/rss/rssVersionHistory.html}",
+    key = {HU}
+}
