Grundlegendes zu Feeds + Vorhandene Feedreader

--- a/urls.bib
+++ b/urls.bib
@@ -33,3 +33,31 @@
     howpublished = "\url{http://cyber.law.harvard.edu/rss/rssVersionHistory.html}",
     key = {HU}
 }
+
+http://web.resource.org/rss/1.0/
+
+@Misc{2.0SPEC,
+    note = {[Stand: 31.03.2015]},
+    url = {http://web.resource.org/rss/1.0/},
+    howpublished = "\url{http://web.resource.org/rss/1.0/}",
+    key = {2.0SPEC}
+}
+
+http://www.rss-verzeichnis.de/was-ist-atom.php
+
+@Misc{WIA,
+    note = {[Stand: 31.03.2015]},
+    url = {http://www.rss-verzeichnis.de/was-ist-atom.php},
+    howpublished = "\url{http://www.rss-verzeichnis.de/was-ist-atom.php}",
+    key = {WIA}
+}
+
+http://tools.ietf.org/html/rfc4287
+
+@Misc{ASP,
+    note = {[Stand: 31.03.2015]},
+    url = {http://tools.ietf.org/html/rfc4287},
+    howpublished = "\url{http://tools.ietf.org/html/rfc4287}",
+    key = {ASP}
+}
+
