--- a/urls.bib
+++ b/urls.bib
@@ -34,7 +34,6 @@
     key = {HU}
 }
 
-http://web.resource.org/rss/1.0/
 
 @Misc{2.0SPEC,
     note = {[Stand: 31.03.2015]},
@@ -43,7 +42,6 @@ http://web.resource.org/rss/1.0/
     key = {2.0SPEC}
 }
 
-http://www.rss-verzeichnis.de/was-ist-atom.php
 
 @Misc{WIA,
     note = {[Stand: 31.03.2015]},
@@ -52,7 +50,6 @@ http://www.rss-verzeichnis.de/was-ist-atom.php
     key = {WIA}
 }
 
-http://tools.ietf.org/html/rfc4287
 
 @Misc{ASP,
     note = {[Stand: 31.03.2015]},
@@ -60,4 +57,27 @@ http://tools.ietf.org/html/rfc4287
     howpublished = "\url{http://tools.ietf.org/html/rfc4287}",
     key = {ASP}
 }
+
+@Misc{PSL,
+    note = {[Stand: 01.04.2015]},
+    url = {http://lzone.de/liferea/},
+    howpublished = "\url{http://lzone.de/liferea/}",
+    key = {PSL}
+}
+
+@Misc{QRSS,
+    note = {[Stand: 01.04.2015]},
+    url = {https://quiterss.org/en/about},
+    howpublished = "\url{https://quiterss.org/en/about}",
+    key = {QRSS}
+}
+
+@Misc{GNUGPL,
+    note = {[Stand: 01.04.2015]},
+    url = {https://www.gnu.org/copyleft/gpl.html},
+    howpublished = "\url{https://www.gnu.org/copyleft/gpl.html}",
+    
+    key = {GNUGPL}
+}
+
 
