--- a/refs.bib
+++ b/refs.bib
@@ -10,13 +10,21 @@
 
 Heinz Wittenbrink: Newsfeeds mit RSS und Atom. Galileo Press, Bonn 2005,
 
-@inproceedings{newsfeeds,
+@book{newsfeeds,
     author = {Heinz Wittenbrink},
-    booktitle = {Newsfeeds mit RSS und Atom},
-    title = {Galileo Press},
+    title = {Newsfeeds mit RSS und Atom},
+    publisher = {Galileo Press},
     year = {2005},
     isbn = {978-3-89842-562-9},
     numpages = {}
+}
+
+@book{DFRA,
+  title={Developing feeds with RSS and Atom},
+  author={Hammersley, Ben},
+  year={2005},
+  publisher={O'Reilly Media, Inc.},
+  pages = {138}
 }
 
 
