--- a/urls.bib
+++ b/urls.bib
@@ -76,8 +76,17 @@
     note = {[Stand: 01.04.2015]},
     url = {https://www.gnu.org/copyleft/gpl.html},
     howpublished = "\url{https://www.gnu.org/copyleft/gpl.html}",
-    
     key = {GNUGPL}
 }
 
+@Article{FPD,
+    author = "Offizielle Dokumentation Universal Feedparser",
+    title = "",
+    journal = "",
+    year = "",
+    note = {[Stand: 10.04.2015]},
+    url = {https://pythonhosted.org/feedparser/},
+    howpublished = "\url{http://wirtschaftslexikon.gabler.de/Archiv/75634/wissen-v4.html}",
+    key = {FPD}
+}
 
