implementierung, anhang, glossar

--- a/urls.bib
+++ b/urls.bib
@@ -90,3 +90,16 @@
     key = {FPD}
 }
 
+
+@Article{WebKit,
+    author = "Offizielle Seite von WebKitGtk+",
+    title = "",
+    journal = "",
+    year = "",
+    note = {[Stand: 12.04.2015]},
+    url = {http://webkitgtk.org},
+    howpublished = "\url{http://webkitgtk.org}",
+    key = {WebKit}
+}
+
+
