--- a/refs.bib
+++ b/refs.bib
@@ -7,9 +7,6 @@
     numpages = {703}
 }
 
-
-Heinz Wittenbrink: Newsfeeds mit RSS und Atom. Galileo Press, Bonn 2005,
-
 @book{newsfeeds,
     author = {Heinz Wittenbrink},
     title = {Newsfeeds mit RSS und Atom},
@@ -27,25 +24,14 @@ Heinz Wittenbrink: Newsfeeds mit RSS und Atom. Galileo Press, Bonn 2005,
   pages = {138}
 }
 
-
-
-@misc{collada,
-  author = {{Khronos Group Inc., The}},
-  title = {{COLLADA} - {D}igital Asset Schema Release 1.4.1 Specification (2nd Edition)},
-  howpublished = {\url{http://www.khronos.org/files/collada_spec_1_4.pdf}},
-  year = {2008}
+@book{LutzLearningPython,
+  title={Learning python},
+  author={Lutz, Mark},
+  year={2013},
+  pages = {3-17},
+  publisher={O'Reilly Media, Inc.}
 }
 
-@inproceedings{icmepaper,
-  title = {Unsupervised Conversion of 3D Models for Interactive Metaverses},
-  author = {Terrace, Jeff and Cheslack-Postava, Ewen and Levis, Philip and Freedman, Michael J.},
-  booktitle = {Proc. {ICME} '12},
-  year = {2012}
-}
 
-@misc{open3dhub,
-  author = {Not Me},
-  key = "Open3DHub",
-  title = "Open3DHub",
-  howpublished={\url{http://open3dhub.com/}}
-}
+
+
