--- a/urls.bib
+++ b/urls.bib
@@ -101,5 +101,40 @@
     howpublished = "\url{http://webkitgtk.org}",
     key = {WebKit}
 }
+http://www.bpython-interpreter.org/about
+
+@Article{bpython,
+    author = "Offizielle Seite von bpython",
+    title = "",
+    journal = "",
+    year = "",
+    note = {[Stand: 13.04.2015]},
+    url = {http://www.bpython-interpreter.org},
+    howpublished = "\url{http://www.bpython-interpreter.org}",
+    key = {bpyhton}
+}
+
+
+@Article{PEP,
+    author = "Offizielle Seite der Python PEP-Stilrichtlinien",
+    title = "",
+    journal = "",
+    year = "",
+    note = {[Stand: 13.04.2015]},
+    url = {https://www.python.org/dev/peps/},
+    howpublished = "\url{https://www.python.org/dev/peps/}",
+    key = {PEP}
+}
+
+@Article{github,
+    author = "Offizielle Seite von github",
+    title = "",
+    journal = "",
+    year = "",
+    note = {[Stand: 13.04.2015]},
+    url = {http://github.com},
+    howpublished = "\url{http://github.com}",
+    key = {github}
+}
 
 
