--- a/urls.bib
+++ b/urls.bib
@@ -137,4 +137,15 @@ http://www.bpython-interpreter.org/about
     key = {github}
 }
 
+@Article{libsoup,
+    author = "Projektseite von libsoup",
+    title = "",
+    journal = "",
+    year = "",
+    note = {[Stand: 15.04.2015]},
+    url = {https://wiki.gnome.org/action/show/Projects/libsoup?action=show&redirect=LibSoup},
+    howpublished = "\url{https://wiki.gnome.org/action/show/Projects/libsoup?action=show&redirect=LibSoup}",
+    key = {libsoup}
+}
+
 
