--- a/urls.bib
+++ b/urls.bib
@@ -1,80 +1,70 @@
 @Misc{DLW,
-    note = {[Stand: 28.03.2015]},
-    url = {http://die-legende-der-waechter.wikia.com/wiki/Gylfie},
+    note = {Offizielle Webseite der Buchreiche -- Die Legende der Wächter. [Stand: 28.03.2015]},
     howpublished = "\url{http://die-legende-der-waechter.wikia.com/wiki/Gylfie}",
     key = {DLW}
 }
 
 @Misc{GIG,
     note = {[Stand: 29.03.2015]},
-    url = {https://developer.gnome.org/hig/stable/},
     howpublished = "\url{https://developer.gnome.org/hig/stable/}",
     key = {GIG}
 }
 
 @Misc{GS,
-    note = {[Stand: 29.03.2015]},
-    url = {http://www.encyclopediaofmath.org/index.php?title=Golden_ratio&oldid=11236},
+    note = {Enzyklopädie für Mathematik. Eine mathematische Herleitung des
+        Goldenen Schnitts. [Stand: 29.03.2015]},
     howpublished = "\url{http://www.encyclopediaofmath.org/index.php?title=Golden_ratio&oldid=11236}",
     key = {GS}
 }
 
 
 @Misc{FU,
-    note = {[Stand: 30.03.2015]},
-    url = {http://www.data2type.de/xml-xslt-xslfo/newsfeeds-rss-atom/was-sind-newsfeeds/versionen-von-rss-und-atom/},
+    note = {Versionsübersicht RSS und Atom. [Stand: 30.03.2015]},
     howpublished = "\url{http://www.data2type.de/xml-xslt-xslfo/newsfeeds-rss-atom/was-sind-newsfeeds/versionen-von-rss-und-atom/}",
     key = {FU}
 }
 
 @Misc{HU,
-    note = {[Stand: 30.03.2015]},
-    url = {http://cyber.law.harvard.edu/rss/rssVersionHistory.html},
+    note = {RSS-Versionsüberischt von Harvard-Law.[Stand: 30.03.2015]},
     howpublished = "\url{http://cyber.law.harvard.edu/rss/rssVersionHistory.html}",
     key = {HU}
 }
 
 
 @Misc{2.0SPEC,
-    note = {[Stand: 31.03.2015]},
-    url = {http://web.resource.org/rss/1.0/},
+    note = {Offizielle Spezifikation von RSS 2.0. [Stand: 31.03.2015]},
     howpublished = "\url{http://web.resource.org/rss/1.0/}",
     key = {2.0SPEC}
 }
 
 
 @Misc{WIA,
-    note = {[Stand: 31.03.2015]},
-    url = {http://www.rss-verzeichnis.de/was-ist-atom.php},
+    note = {RSS-Verzeichnis. Informationen über Atom. [Stand: 31.03.2015]},
     howpublished = "\url{http://www.rss-verzeichnis.de/was-ist-atom.php}",
     key = {WIA}
 }
 
 
 @Misc{ASP,
-    note = {[Stand: 31.03.2015]},
-    url = {http://tools.ietf.org/html/rfc4287},
+    note = {Spezifikation des Standards Atom. [Stand: 31.03.2015]},
     howpublished = "\url{http://tools.ietf.org/html/rfc4287}",
     key = {ASP}
 }
 
 @Misc{PSL,
-    note = {[Stand: 01.04.2015]},
-    url = {http://lzone.de/liferea/},
+    note = {Offizielle Webseite des Feedreaders Liferea. [Stand: 01.04.2015]},
     howpublished = "\url{http://lzone.de/liferea/}",
     key = {PSL}
 }
 
 @Misc{QRSS,
-    note = {[Stand: 01.04.2015]},
-    url = {https://quiterss.org/en/about},
+    note = {Offizielle Webseite des Feedreaders QuiteRSS. [Stand: 01.04.2015]},
     howpublished = "\url{https://quiterss.org/en/about}",
     key = {QRSS}
 }
 
 @Misc{GNUGPL,
-    note = {[Stand: 01.04.2015]},
-    url = {https://www.gnu.org/copyleft/gpl.html},
+    note = {Offizielle Webseite von GNU GPL. [Stand: 01.04.2015]},
     howpublished = "\url{https://www.gnu.org/copyleft/gpl.html}",
     key = {GNUGPL}
 }
