--- a/urls.bib
+++ b/urls.bib
@@ -82,7 +82,7 @@
 
 
 @Article{WebKit,
-    author = "Offizielle Seite von WebKitGtk+",
+    author = "Offizielle Webseite von WebKitGtk+",
     title = "",
     journal = "",
     year = "",
@@ -94,7 +94,7 @@
 http://www.bpython-interpreter.org/about
 
 @Article{bpython,
-    author = "Offizielle Seite von bpython",
+    author = "Offizielle Webseite von bpython",
     title = "",
     journal = "",
     year = "",
@@ -106,7 +106,7 @@ http://www.bpython-interpreter.org/about
 
 
 @Article{PEP,
-    author = "Offizielle Seite der Python PEP-Stilrichtlinien",
+    author = "Offizielle Webseite der Python PEP-Stilrichtlinien",
     title = "",
     journal = "",
     year = "",
@@ -117,7 +117,7 @@ http://www.bpython-interpreter.org/about
 }
 
 @Article{github,
-    author = "Offizielle Seite von github",
+    author = "Offizielle Webseite von github",
     title = "",
     journal = "",
     year = "",
@@ -136,6 +136,19 @@ http://www.bpython-interpreter.org/about
     url = {https://wiki.gnome.org/action/show/Projects/libsoup?action=show&redirect=LibSoup},
     howpublished = "\url{https://wiki.gnome.org/action/show/Projects/libsoup?action=show&redirect=LibSoup}",
     key = {libsoup}
+}
+
+@Misc{i3,
+    note = {Offizielle Weseite des Tiling-Window-Managers i3. [Stand: 17.04.2015]},
+    howpublished = "\url{http://i3wm.org/screenshots/}",
+    key = {i3}
+}
+
+
+@Misc{libnotify,
+    note = {GNOME Developer API zu der Bibliothek libnotify. [Stand: 17.04.2015]},
+    howpublished = "\url{https://developer.gnome.org/libnotify/0.7/NotifyNotification.html}",
+    key = {libnotify}
 }
 
 
