--- a/urls.bib
+++ b/urls.bib
@@ -63,6 +63,18 @@
     key = {QRSS}
 }
 
+@Misc{RSSOwl,
+    note = {Offizielle Webseite des Feedreaders RSSOwl. [Stand: 19.04.2015]},
+    howpublished = "\url{http://www.rssowl.org/}",
+    key = {RSSOwl}
+}
+
+@Misc{Vienna,
+    note = {Offizielle Webseite des Feedreaders Vienna. [Stand: 19.04.2015]},
+    howpublished = "\url{http://www.vienna-rss.org/}",
+    key = {Vienna}
+}
+
 @Misc{GNUGPL,
     note = {Offizielle Webseite von GNU GPL. [Stand: 01.04.2015]},
     howpublished = "\url{https://www.gnu.org/copyleft/gpl.html}",
