--- a/urls.bib
+++ b/urls.bib
@@ -1,11 +1,11 @@
 @Misc{DLW,
-    note = {Offizielle Webseite der Buchreiche -- Die Legende der Wächter. [Stand: 28.03.2015]},
+    note = {Offizielle Webseite der Buchreihe -- Die Legende der Wächter. [Stand: 28.03.2015]},
     howpublished = "\url{http://die-legende-der-waechter.wikia.com/wiki/Gylfie}",
     key = {DLW}
 }
 
 @Misc{GIG,
-    note = {[Stand: 29.03.2015]},
+    note = {GNOME Human Interface Guidelines [Stand: 29.03.2015]},
     howpublished = "\url{https://developer.gnome.org/hig/stable/}",
     key = {GIG}
 }
@@ -116,14 +116,13 @@ http://www.bpython-interpreter.org/about
     key = {bpyhton}
 }
 
-
 @Article{PEP,
-    author = "Offizielle Webseite der Python PEP-Stilrichtlinien",
+    author = "Offizielle Webseite der Python PEP8-Stilrichtlinien",
     title = "",
     journal = "",
     year = "",
     note = {[Stand: 13.04.2015]},
-    url = {https://www.python.org/dev/peps/},
+    url = {https://www.python.org/dev/peps-0008/},
     howpublished = "\url{https://www.python.org/dev/peps/}",
     key = {PEP}
 }
