--- a/urls.bib
+++ b/urls.bib
@@ -1,5 +1,5 @@
 @Misc{DLW,
-    note = {Offizielle Webseite der Buchreihe -- Die Legende der Wächter. [Stand: 28.03.2015]},
+    note = {Webseite der Buchreihe -- Die Legende der Wächter. [Stand: 28.03.2015]},
     howpublished = "\url{http://die-legende-der-waechter.wikia.com/wiki/Gylfie}",
     key = {DLW}
 }
@@ -19,7 +19,7 @@
 
 
 @Misc{FU,
-    note = {Versionsübersicht RSS und Atom. [Stand: 30.03.2015]},
+    note = {RSS und Atom. [Stand: 30.03.2015]},
     howpublished = "\url{http://www.data2type.de/xml-xslt-xslfo/newsfeeds-rss-atom/was-sind-newsfeeds/versionen-von-rss-und-atom/}",
     key = {FU}
 }
@@ -32,7 +32,7 @@
 
 
 @Misc{2.0SPEC,
-    note = {Offizielle Spezifikation von RSS 2.0. [Stand: 31.03.2015]},
+    note = {Spezifikation von RSS 2.0. [Stand: 31.03.2015]},
     howpublished = "\url{http://web.resource.org/rss/1.0/}",
     key = {2.0SPEC}
 }
@@ -45,112 +45,83 @@
 }
 
 
-@Misc{ASP,
-    note = {Spezifikation des Standards Atom. [Stand: 31.03.2015]},
-    howpublished = "\url{http://tools.ietf.org/html/rfc4287}",
+@misc{ASP,
+    note = {Spezifikation Atom. [Stand: 31.03.2015]},
+    howpublished = {\url{http://tools.ietf.org/html/rfc4287}},
     key = {ASP}
 }
 
 @Misc{PSL,
-    note = {Offizielle Webseite des Feedreaders Liferea. [Stand: 01.04.2015]},
+    note = {Webseite Feedreader Liferea. [Stand: 01.04.2015]},
     howpublished = "\url{http://lzone.de/liferea/}",
     key = {PSL}
 }
 
 @Misc{QRSS,
-    note = {Offizielle Webseite des Feedreaders QuiteRSS. [Stand: 01.04.2015]},
+    note = {Webseite Feedreader QuiteRSS. [Stand: 01.04.2015]},
     howpublished = "\url{https://quiterss.org/en/about}",
     key = {QRSS}
 }
 
 @Misc{RSSOwl,
-    note = {Offizielle Webseite des Feedreaders RSSOwl. [Stand: 19.04.2015]},
+    note = {Webseite Feedreader RSSOwl. [Stand: 19.04.2015]},
     howpublished = "\url{http://www.rssowl.org/}",
     key = {RSSOwl}
 }
 
 @Misc{Vienna,
-    note = {Offizielle Webseite des Feedreaders Vienna. [Stand: 19.04.2015]},
+    note = {Webseite Feedreaders Vienna. [Stand: 19.04.2015]},
     howpublished = "\url{http://www.vienna-rss.org/}",
     key = {Vienna}
 }
 
 @Misc{GNUGPL,
-    note = {Offizielle Webseite von GNU GPL. [Stand: 01.04.2015]},
+    note = {Webseite GNU GPL. [Stand: 01.04.2015]},
     howpublished = "\url{https://www.gnu.org/copyleft/gpl.html}",
     key = {GNUGPL}
 }
 
-@Article{FPD,
-    author = "Offizielle Dokumentation Universal Feedparser",
-    title = "",
-    journal = "",
-    year = "",
-    note = {[Stand: 10.04.2015]},
-    url = {https://pythonhosted.org/feedparser/},
+@misc{FPD,
+    note = {Dokumentation Universal Feedparser [Stand: 10.04.2015]},
     howpublished = "\url{http://wirtschaftslexikon.gabler.de/Archiv/75634/wissen-v4.html}",
     key = {FPD}
 }
 
 
-@Article{WebKit,
-    author = "Offizielle Webseite von WebKitGtk+",
-    title = "",
-    journal = "",
-    year = "",
-    note = {[Stand: 12.04.2015]},
-    url = {http://webkitgtk.org},
+@misc{WebKit,
+    note = {Webseite von WebKitGtk+ [Stand: 12.04.2015]},
     howpublished = "\url{http://webkitgtk.org}",
     key = {WebKit}
 }
-http://www.bpython-interpreter.org/about
 
-@Article{bpython,
-    author = "Offizielle Webseite von bpython",
-    title = "",
-    journal = "",
-    year = "",
-    note = {[Stand: 13.04.2015]},
-    url = {http://www.bpython-interpreter.org},
+@misc{bpython,
+    note = {Webseite von bpython [Stand: 13.04.2015]},
     howpublished = "\url{http://www.bpython-interpreter.org}",
     key = {bpyhton}
 }
 
-@Article{PEP,
-    author = "Offizielle Webseite der Python PEP8-Stilrichtlinien",
-    title = "",
-    journal = "",
-    year = "",
-    note = {[Stand: 13.04.2015]},
-    url = {https://www.python.org/dev/peps-0008/},
-    howpublished = "\url{https://www.python.org/dev/peps/}",
+@misc{PEP,
+    note = {Webseite der Python PEP8-Stilrichtlinien [Stand: 13.04.2015]},
+    howpublished = "\url{https://www.python.org/dev/peps/pep-0008/}",
     key = {PEP}
 }
 
-@Article{github,
-    author = "Offizielle Webseite von github",
-    title = "",
-    journal = "",
-    year = "",
-    note = {[Stand: 13.04.2015]},
-    url = {http://github.com},
+@misc{github,
+    note = {Webseite von github [Stand: 13.04.2015]},
     howpublished = "\url{http://github.com}",
     key = {github}
 }
 
-@Article{libsoup,
-    author = "Projektseite von libsoup",
-    title = "",
-    journal = "",
-    year = "",
-    note = {[Stand: 15.04.2015]},
-    url = {https://wiki.gnome.org/action/show/Projects/libsoup?action=show&redirect=LibSoup},
+
+@Misc{libsoup,
+    note = {Projektseite von libsoup [Stand: 17.04.2015]},
     howpublished = "\url{https://wiki.gnome.org/action/show/Projects/libsoup?action=show&redirect=LibSoup}",
     key = {libsoup}
 }
 
+
 @Misc{i3,
-    note = {Offizielle Weseite des Tiling-Window-Managers i3. [Stand: 17.04.2015]},
+    note = {Webseite des Tiling-Window-Managers i3. [Stand: 17.04.2015]},
     howpublished = "\url{http://i3wm.org/screenshots/}",
     key = {i3}
 }
